[gd_scene load_steps=12 format=2]

[ext_resource path="res://Common/HitHurtBox/HitBox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Common/Experimental/ProtoUpgradeGun/Projectiles/FireBalls/FireBall.gd" type="Script" id=2]

[sub_resource type="PhysicsMaterial" id=18]
bounce = 0.5

[sub_resource type="CircleShape2D" id=12]
resource_local_to_scene = true
radius = 9.05539

[sub_resource type="CanvasItemMaterial" id=13]
blend_mode = 1

[sub_resource type="Gradient" id=14]
offsets = PoolRealArray( 0.0125, 0.04375, 0.4125, 0.8875, 1 )
colors = PoolColorArray( 1, 0.792157, 0, 0, 1, 0.878418, 0.25, 1, 0.961914, 0.285568, 0.285568, 1, 0.979114, 0.358499, 0.213275, 0.548387, 1, 0.447059, 0.12549, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 14 )
width = 100

[sub_resource type="Curve" id=15]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=11]
curve = SubResource( 15 )

[sub_resource type="ParticlesMaterial" id=16]
lifetime_randomness = 0.64
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 81.68
initial_velocity_random = 0.36
angular_velocity = 100.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -93.07
linear_accel_random = 1.0
radial_accel = 24.24
damping = 71.29
angle = 720.0
angle_random = 1.0
scale = 20.1
scale_random = 1.0
scale_curve = SubResource( 11 )
color_ramp = SubResource( 10 )

[sub_resource type="CircleShape2D" id=17]
resource_local_to_scene = true
radius = 8.0

[node name="FireBall" type="RigidBody2D"]
collision_layer = 64
physics_material_override = SubResource( 18 )
gravity_scale = 10.0
script = ExtResource( 2 )

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 12 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 13 )
amount = 24
lifetime = 0.5
preprocess = 16.0
explosiveness = 0.06
randomness = 0.63
local_coords = false
process_material = SubResource( 16 )

[node name="HitBox" parent="." instance=ExtResource( 1 )]
position = Vector2( -2, 0 )
collision_layer = 16
damage = 10.0
knock_back_force = 100.0

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 17 )

[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]

[editable path="HitBox"]
